--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -785,6 +785,11 @@ fieldset[disabled] .btn-google.active {
   word-break:break-all;
 }
 
+.create-user-link {
+  text-decoration: underline;
+  color: #29462a;
+}
+
 .profile-section {
   margin-bottom: 1.5em;
 }
