--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -358,151 +358,152 @@
                 <table class="tnth-admin-table table table-condensed table-striped table-bordered small-text" id="">
                     <caption>Instrument: Epic26</caption>
                     <tr>
+                        <th></th>
                         <th class="table-title">Question
                         </th>
                         <th class="table-title">Response
                         </th>
                     </tr>
                     <tr>
-                        <td>1. Over the past 4 weeks, how often have you leaked urine?"
+                        <td>1.</td><td> Over the past 4 weeks, how often have you leaked urine?"
                         </td>
                         <td>Frequent dribbling
                         </td>
                     </tr>
                     <tr>
-                        <td>2. Which of the following best describes your urinary control during the last 4 weeks?"
+                        <td>2.</td><td> Which of the following best describes your urinary control during the last 4 weeks?"
                         </td>
                         <td>2 pads per day
                         </td>
                     </tr>
                     <tr>
-                        <td>3. How many pads or adult diapers per day did you usually use to control leakage during the last 4 weeks?
+                        <td>3.</td><td> How many pads or adult diapers per day did you usually use to control leakage during the last 4 weeks?
                         </td>
                         <td>No problem
                         </td>
                     </tr>
                     <tr>
-                        <td>a. Dripping or leaking urine
+                        <td>a.</td><td> Dripping or leaking urine
                         </td>
                         <td>1
                         </td>
                     </tr>
                     <tr>
-                        <td> b. Pain or burning on urination
+                        <td> b.</td><td> Pain or burning on urination
                         </td>
                         <td>2
                         </td>
                     </tr>
                     <tr>
-                        <td> d. Weak urine stream or incomplete emptying
+                        <td> d.</td><td> Weak urine stream or incomplete emptying
                         </td>
                         <td>4
                         </td>
                     </tr>
                     <tr>
-                        <td> e. Need to urinate frequently during the day
+                        <td> e.</td><td> Need to urinate frequently during the day
                         </td>
                         <td>Small problem
                         </td>
                     </tr>
                     <tr>
-                        <td> 5. Overall, how big a problem has your urinary function been for you during the last 4 weeks?
+                        <td> 5.</td><td>Overall, how big a problem has your urinary function been for you during the last 4 weeks?
                         </td>
                         <td>No problem
                         </td>
                     </tr>
                     <tr>
-                        <td> a. Urgency to have a bowel movement
+                        <td> a.</td><td> Urgency to have a bowel movement
                         </td>
                         <td>1
                         </td>
                     </tr>
                     <tr>
-                        <td> b. Increased frequency of bowel movements
+                        <td> b.</td><td> Increased frequency of bowel movements
                         </td>
                         <td>2
                         </td>
                     </tr>
                     <tr>
-                        <td> c. Losing control of your stools
+                        <td> c.</td><td> Losing control of your stools
                         </td>
                         <td>3
                         </td>
                     </tr>
                     <tr>
-                        <td> e. Abdominal / Pelvic / Rectal Pain
+                        <td> e.</td><td> Abdominal / Pelvic / Rectal Pain
                         </td>
                         <td>Very small problem
                         </td>
                     </tr>
                     <tr>
-                        <td> 7. Overall, how big a problem have your bowel habits been for you during the past 4 weeks?
+                        <td> 7.</td><td> Overall, how big a problem have your bowel habits been for you during the past 4 weeks?
                         </td>
                         <td>Very Poor to None
                         </td>
                     </tr>
                     <tr>
-                        <td> a. Your ability to have an erection?
+                        <td> a.</td><td> Your ability to have an erection?
                         </td>
                         <td>4
                         </td>
                     </tr>
                     <tr>
-                        <td> b. Your ability to reach orgasm (climax)?
+                        <td> b.</td><td> Your ability to reach orgasm (climax)?
                         </td>
                         <td>Firm enough for masturbation and foreplay only
                         </td>
                     </tr>
                     <tr>
-                        <td> 9. How would you describe the usual QUALITY of your erections during the last 4 weeks?
+                        <td> 9.</td><td> How would you describe the usual QUALITY of your erections during the last 4 weeks?
                         </td>
                         <td>I had an erection LESS THAN HALF the time I wanted one
                         </td>
                     </tr>
                     <tr>
-                        <td> 10. How would you describe the FREQUENCY of your erections during the last 4 weeks?
+                        <td> 10. </td><td>How would you describe the FREQUENCY of your erections during the last 4 weeks?
                         </td>
                         <td>Very poor
                         </td>
                     </tr>
                     <tr>
-                        <td> 11. Overall, how would you rate your ability to function sexually during the last 4 weeks?
+                        <td> 11.</td><td> Overall, how would you rate your ability to function sexually during the last 4 weeks?
                         </td>
                         <td>Moderate problem
                         </td>
                     </tr>
                     <tr>
-                        <td> 12. Overall, how big a problem has your sexual function or lack of sexual function been for you during the last 4 weeks?
+                        <td> 12.</td><td> Overall, how big a problem has your sexual function or lack of sexual function been for you during the last 4 weeks?
                         </td>
                         <td>Big problem
                         </td>
                     </tr>
                     <tr>
-                        <td> a. Hot flashes
+                        <td> a.</td><td>Hot flashes
                         </td>
                         <td>3
                         </td>
                     </tr>
                     <tr>
-                        <td> b. Breast tenderness / enlargement
+                        <td> b.</td><td> Breast tenderness / enlargement
                         </td>
                         <td>2
                         </td>
                     </tr>
                     <tr>
-                        <td> c. Feeling depressed
+                        <td> c.</td><td> Feeling depressed
                         </td>
                         <td>1
                         </td>
                     </tr>
                     <tr>
-                        <td> d. Lack of energy
+                        <td> d.</td><td> Lack of energy
                         </td>
                         <td>0
                         </td>
                     </tr>
                     <tr>
-                        <td> e. Change in body weight"
+                        <td> e.</td><td> Change in body weight"
                         </td>
                         <td>0
                         </td>
