https://www.pivotaltracker.com/story/show/131962901 Bringing in a couple minor ePROMs things that were lost in recent git branching

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -24,7 +24,7 @@
 
                     <div class="headline">
                         <div style="margin-bottom: 1em">Welcome to TrueNTH</div>
-                        Tools for navigating the prostate cancer journey
+                        Gathering Health Outcomes to Improve Prostate Cancer Care
                     </div>
                     <a href="/user/register" class="btn feature-btn feature-btn-primary">Register</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">Login</a>
 
