https://www.pivotaltracker.com/story/show/131476539/comments/151945867 cleaned up a button

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -7,7 +7,7 @@
 
 <br/>
 
-<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link">Create an user</button></a> or Select any user to view details or make changes.<hr/></div>
+<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link btn btn-lg btn-tnth-primary">Create a user</button></a> or Select any user to view details or make changes.<hr/></div>
 
 
 {% if patients_by_org|length > 1 %}
