--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -7,7 +7,7 @@
 
 <br/>
 
-<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link btn btn-lg btn-tnth-primary">Create a user</button></a> or Select any user to view details or make changes.<hr/></div>
+<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link btn btn-lg btn-tnth-primary">Create a patient record</button></a> or select a patient below to view or update details.<hr/></div>
 
 
 {% if patients_by_org|length > 1 %}
