More email content html changes...

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -219,26 +219,7 @@
                     if (url != '') {
 
                         var body = 
-'<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
-<body>
-        <p>Hello,</p>
-<p>This message is an invitation to contribute data to the ePROMs system.</p>
-<table>
-    <tr>
-        <td align="center" width="300" bgcolor="#0088cc" style="background: #0088cc;
-        -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;
-        color: #fff; font-weight: bold; text-decoration: none; padding: 6px;
-        font-family: Helvetica, Arial, sans-serif; display: block;">
-            <a href="' + url _ '" style="color: #fff; text-decoration: none; display: block; font-size: 16px; width: 300px">Visit ePROMs</a>        </td>
-    </tr>
-</table>
-<p>Click on the button above or this link to visit ePROMs and complete your questionnaire:<br />
-    <a href="' + url + '">' + url + '</a></p>
-<p><em>&mdash; An automatic reminder from the ePROMs system</em></p>
-</body>
-</html>
-';
+'<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><html><body><p>Hello,</p><p>This message is an invitation to contribute data to the ePROMs system.</p><table><tr><td align="center" width="300" bgcolor="#0088cc" style="background: #0088cc; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; color: #fff; font-weight: bold; text-decoration: none; padding: 6px; font-family: Helvetica, Arial, sans-serif; display: block;"><a href="' + url _ '" style="color: #fff; text-decoration: none; display: block; font-size: 16px; width: 300px">Visit ePROMs</a></td></tr></table><p>Click on the button above or this link to visit ePROMs and complete your questionnaire:<br /><a href="' + url + '">' + url + '</a></p><p><em>&mdash; An automatic reminder from the ePROMs system</em></p></body></html>';
 
                         $.ajax ({
                             type: 'POST',
